0.9.0 (currently working on)
- [#3182] Feature: Add functions concerning the publication hash to the event model and mapper
- [#3179] Feature: When an event record is hidden by the FE editor, set the publication hash
- [#3170] Feature: Add a list of checkboxes concerning which fields of the FE editor should be required.
- [#3168] Fix: The "my entered events" and "my managed events" lists shouldn't use any time-frame limitations
- [#3172] Feature: Add a column "status" to the "my entered events" and "my managed" events list
- [#1664] Cleanup: Clean up the registration BE form
- [#3178] Feature: Add a field "publication hash" to the seminars table
- [#3160] Fix: Two tests don't work properly
- [#3162] Feature: Include the places' cities and countries in the e-mails to the attendees
- [#3165] Fix: Umlauts not encoded correctly in the e-mail subject
- [#3117] Feature: In the thank-you e-mail and the notification e-mail, list the FE user himself
- [#3155] Feature: Add a switch for allowing registration for started events
- [#3119] Feature: Rework the salutation in the thank-you e-mails
- [#3159] Fix: Missing config check for allowRegistrationForEventsWithoutDate
- [#3120] Feature: Copy the company name and full name from the FE user into the billing data fields and store them in the session
- [#3114] Feature: In the notification e-mail to the organizers, enumerate the registered persons
- [#3118] Feature: In the thank-you e-mail, include the places' address field
- [#3121] Change: When CSV-exporting the name in the FE users and registrations, take the first name and last name
- [#2773] Fix: 3 registration records created when registering with IE 6
- [#3146] Fix: $uid is not initialized in registration::setRegistrationData
- [#3151] Fix: SQL error on the registration page with latest static_info_tables
- [#3116] Feature: Add a three-line textarea "company" to the billing address section in the registration form