@@ -338,6 +338,18 @@ t3lib_extMgm::addTCAcolumns(
 				'maxitems' => '1',
 			),
 		),
+		'tx_seminars_reviewer' => array(
+			'exclude' => 1,
+			'label' => 'LLL:EXT:seminars/locallang_db.xml:fe_groups.tx_seminars_reviewer',
+			'config' => array(
+				'type' => 'group',
+				'internal_type' => 'db',
+				'allowed' => 'be_users',
+				'size' => 1,
+				'minitems' => 0,
+				'maxitems' => 1,
+			),
+		),
 	),
 	1
 );
@@ -345,7 +357,8 @@ t3lib_extMgm::addTCAcolumns(
 t3lib_extMgm::addToAllTCAtypes(
 	'fe_groups',
 	'--div--;LLL:EXT:seminars/locallang_db.xml:fe_groups.tab_event_management,' .
-		'tx_seminars_publish_events;;;;1-1-1,tx_seminars_auxiliary_records_pid,'
+		'tx_seminars_publish_events;;;;1-1-1,tx_seminars_auxiliary_records_pid,'.
+		'tx_seminars_reviewer'
 );
 
 if (TYPO3_MODE == 'BE') {
