@@ -206,6 +206,7 @@
 			<label index="fe_groups.tx_seminars_publish_events.I.2">newly created and edited events are hidden</label>
 			<label index="fe_groups.tab_event_management">Event management</label>
 			<label index="fe_groups.tx_seminars_auxiliary_records_pid">Store auxiliary records for seminars in page:</label>
+			<label index="fe_groups.tx_seminars_reviewer">BE user to receive the publication e-mail for FE-edited events:</label>
 			<label index="owner_feuser">Front-end user who has created this record:</label>
 		</languageKey>
 		<languageKey index="de" type="array">
@@ -406,6 +407,7 @@
 			<label index="fe_groups.tx_seminars_publish_events.I.2">neu erstellte und bearbeitete Veranstaltungen verstecken</label>
 			<label index="fe_groups.tab_event_management">Veranstaltungsverwaltung</label>
 			<label index="fe_groups.tx_seminars_auxiliary_records_pid">Speichere Hilfsdatensätze für seminars in Seite:</label>
+			<label index="fe_groups.tx_seminars_reviewer">BE-Benutzer, der die Freischaltmail für im FE bearbeitete Veranstaltungen bekommt:</label>
 			<label index="owner_feuser">Frontend-User, der diesen Datensatz eingetragen hat:</label>
 		</languageKey>
 		<languageKey index="nl" type="array">
@@ -1366,6 +1368,7 @@
 			<label index="fe_groups.tx_seminars_publish_events.I.2" type="integer">64830383</label>
 			<label index="fe_groups.tab_event_management" type="integer">136062963</label>
 			<label index="fe_groups.tx_seminars_auxiliary_records_pid" type="integer">86039397</label>
+			<label index="fe_groups.tx_seminars_reviewer" type="integer">14025609</label>
 			<label index="owner_feuser" type="integer">36410852</label>
 		</languageKey>
 		<languageKey index="nl" type="array">
@@ -2327,6 +2330,7 @@
 			<label index="fe_groups.tx_seminars_publish_events.I.2">newly created and edited events are hidden</label>
 			<label index="fe_groups.tab_event_management">Event management</label>
 			<label index="fe_groups.tx_seminars_auxiliary_records_pid">Store auxiliary records for seminars in page:</label>
+			<label index="fe_groups.tx_seminars_reviewer">BE user to receive the publication e-mail for FE-edited events:</label>
 			<label index="owner_feuser">Front-end user who has created this record:</label>
 		</languageKey>
 		<languageKey index="dk" type="array">
